2013-11-03  Per Bothner  <per@bothner.com>

	* GapVector.java (add): Use setBuffer rather than set.  The
	former may be more efficient, as it doesn't get the old value.

	* GapVector.java (consumePosRange): Fix infinite-recursion thinko.

2013-11-01  Per Bothner  <per@bothner.com>

	* PositionConsumer.java (consume(SeqPosition)): Rename
	to writePosition.
	* TreeList.java: Update accordingly.

2013-10-31  Per Bothner  <per@bothner.com>

	* SimpleVector.java (consumeNext): Remove redundant method - it
	doesn't really buy anything compared to the inherited default.
	* BitVector.java, ByteVector.java, F32Vector.java, F64Vector.java,
	FString.java, FVector.java, S16Vector.java, S32Vector.java,
	S64Vector.java, U16Vector.java, U32Vector.java, U64Vector.java:
	Likewise.

	* GapVector.java: Add generic parameter.
	* SubSequence.java: Likewise.

2013-10-31  Per Bothner  <per@bothner.com>

	* SimpleVector.java (setBuffer): Change return type to void.
	* BitVector.java, F32Vector.java, F64Vector.java, FString.java,
	FVector.java, S16Vector.java, S32Vector.java, S64Vector.java,
	S8Vector.java, U16Vector.java, U32Vector.java, U64Vector.java,
	U8Vector.java: Update accordingly.

2013-10-19  David Van Horn
	    Per Bothner  <per@bothner.com>

	* RAPair.java: Port to Java of low-level class definition and methods
	from  SRFI-101 "Purely Functional Random-Access Pairs and Lists"
	reference implementation.
	* Makefile.am: Update accordingly.

2013-09-20  Per Bothner  <per@bothner.com>

	* Consumer.java: If JAVA8 implement java.util.function.Consumer and
	java.util.function.PInt,Long,Double}Consumer.
	* SimpleVector.java (forEach): New method (optimization) if JAVA8.

2013-09-15  Per Bothner  <per@bothner.com>

	* StableVector.java (adjustPositions): Fix off-by-one calculations.

	* CharBuffer.java (dump): Adjust for gap size when printing positions.

2013-09-03  Per Bothner  <per@bothner.com>

	* PrintConsumer.java (write): The write method is supposed to